--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,31 @@ code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 ul,
-ol{
+ol {
  list-style: none;
 }
-
-
-
-
+.linkDetails {
+ margin-right: 30px;
+ font-size: 20px;
+ font-weight: 700;
+ text-decoration: none;
+ text-shadow: 2px 2px 3px rgba(71, 76, 64, 1);
+}
+.linkDetailActiv {
+ color: red;
+}
+.buttonGoback {
+ display: block;
+ width: 100px;
+ height: 30px;
+ margin-bottom: 10px;
+ margin-top: 10px;
+ margin-left: 20px;
+ border-radius: 15px;
+ font-size: 20px;
+ font-weight: 500;
+}
+.buttonGoback:hover {
+   cursor: pointer;
+   background-color: springgreen;
+  }
