--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@ body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  background-color: rgb(228, 152, 118);
+ background-image: url('./images/cinemaBG2.jpg');
+ background-repeat: no-repeat;
+ background-size: cover;
 }
 
 code {
