--- a/src/pages/MoviesPageStyled.module.css
+++ b/src/pages/MoviesPageStyled.module.css
@@ -3,7 +3,7 @@
  height: 100%;
  padding-bottom: 25px;
  padding-top: 25px;
- background-image: url("../images/cinemaBG.jpg");
+ background-image: url("../images/cinemaBG2.jpg");
  background-repeat: no-repeat;
  background-size: cover; */
 }
