--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
 body {
- margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
- background-color: rgb(228, 152, 118);
- background-image: url('./images/cinemaBG.jpg');
+ /* background-color: rgb(228, 152, 118); */
+ background-image: url("./images/cinemaBG.jpg");
  background-repeat: no-repeat;
  background-size: cover;
 }
-
+#root {
+ width: 100%;
+ height: 100%;
+}
 code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
@@ -15,30 +17,35 @@ ul,
 ol {
  list-style: none;
 }
+.linkDetailsContainer {
+ display: flex;
+ align-items: center;
+ justify-content: flex-start;
+ margin-top: 0;
+ padding-left: 50px;
+}
 .linkDetails {
  margin-right: 30px;
- font-size: 30px;
+ font-size: 25px;
  font-weight: 700;
  text-decoration: none;
  text-shadow: 2px 2px 3px #ecffd1;
- 
 }
 .linkDetailActiv {
  color: red;
 }
-.buttonGoback {
- display: block;
- width: 100px;
- height: 30px;
- margin-bottom: 10px;
- margin-top: 10px;
- margin-left: 20px;
- border-radius: 13px;
- font-size: 20px;
- font-weight: 500;
- background-color: rgb(0, 255, 42);
+@media screen and (min-width: 768px) {
+ .linkDetailsContainer {
+  padding-left: 35px;
+ }
+ .linkDetails {
+  margin-right: 30px;
+  font-size: 30px;
+ }
 }
-.buttonGoback:hover {
-   cursor: pointer;
-   
-  }
+@media screen and (min-width: 1200px) {
+ .linkDetailsContainer {
+  padding-left: 50px;
+ }
+ 
+}
