--- a/src/pages/MoviesPageStyled.module.css
+++ b/src/pages/MoviesPageStyled.module.css
@@ -1,9 +1,10 @@
 .MoviesPageContainer {
- /* width: 100%;
- height: 100%;
- padding-bottom: 25px;
- padding-top: 25px;
- background-image: url("../images/cinemaBG2.jpg");
- background-repeat: no-repeat;
- background-size: cover; */
+ min-height: 100vh;
+}
+@media screen and (min-width: 768px) {
+ .MoviesPageContainer {
+  width: 100%;
+  height: 100%;
+  padding-bottom: 25px;
+ }
 }
